    * [OPENJPA-121] - Table name defaults to the class name instead of the entity name
    * [OPENJPA-122] - EntityManager does not throw exceptions after close() in required cases
    * [OPENJPA-132] - java.lang.NoSuchMethodError for entity with ID of type java.sql.Date
    * [OPENJPA-133] - Can't find non-public callback methods with superclass or interface parameters
    * [OPENJPA-139] - PersistenceException merging an entity with a Calendar field. 
    * [OPENJPA-140] - Wrong package name in test classes
    * [OPENJPA-142] - Entity name is ignored when specified in the orm.xml file
    * [OPENJPA-144] - JDBCConfigurationImpl does not support JNDI lookup for non-jta-data-source.  
    * [OPENJPA-146] - Entity enhancement fails while using EmbeddedId on a MappedSuperclass
    * [OPENJPA-150] - @Column in @AttributeOverride not honoring table attribute that maps to a secondary table in mappedsuperclass entity
    * [OPENJPA-154] - OptimisticLockException working with  Savepoints
    * [OPENJPA-155] -  java.lang.ArrayIndexOutOfBoundsException during commit
    * [OPENJPA-157] - NullPointerException when running query with null parameter
    * [OPENJPA-162] - @OrderBy on @OneToMany does not allow ordering by @Id value
    * [OPENJPA-174] - error when find()'ing an abstract class
    * [OPENJPA-175] - Eager selects by PagingResultObjectProvider may not use the FetchBatchSize
    * [OPENJPA-179] - Schemas defined in orm.xml are only applied when a name is also specified. 
    * [OPENJPA-181] - ClassCastException when executing bulk delete on an entity that owns a OneToOne with a Cascade.DELETE when DataCache is on
    * [OPENJPA-185] - optional attribute is not overriden by xml descriptor
    * [OPENJPA-186] - Build failure of OpenJPA sources from trunk