@@ -5,6 +5,7 @@
 
 <ul>
 <li><a href="#Overview">Overview</a></li>
+<li><a href="#Prerequisites">Prerequisites</a></li>
 <li><a href="#Documentation">Documentation</a></li>
 <li><a href="#GetInvolved">Getting Involved</a></li>
 <li><a href="#Bugs">Bugs</a></li>
@@ -30,6 +31,13 @@ Java Community Process
 <p>
 Additional information on the OpenJPA project may be found at the project web 
 site: <a href="http://incubator.apache.org/openjpa/">
+http://incubator.apache.org/openjpa/</a>
+
+<h2><a name="Prerequisites"></a>Prerequisites</h2>
+<P>
+OpenJPA requires Java 1.5 but will not compile with Java 6. More accurately
+OpenJPA is not compatible with JDBC 4 which is included in Java 6. For more
+detail please see <a href="http://issues.apache.org/jira/browse/OPENJPA-5">
 http://incubator.apache.org/openjpa/</a>
 
 <h2><a name="Documentation"></a>Documentation</h2>
